Buscando Datos desde HttpCliente

--- a/MonkeyFinder/MonkeyFinder.csproj
+++ b/MonkeyFinder/MonkeyFinder.csproj
@@ -49,8 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Services\" />
-	  <Folder Include="ViewModel\" />
+	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
